--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from preyantechnosys.com/html/elexio/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 02 Mar 2024 14:31:10 GMT -->
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +8,9 @@
 <meta name="keywords" content="Elexio-Electric Vehicle & Charging Station HTML Template ,Elexio- Electric Vehicle & Charging Station WordPress theme, themes & template,wordpress theme, html5 template,unlimited colors available, ui/ux,ui/ix designs,best wordpress theme,html template, html,javascript,best css theme, css3,elementor theme,latest premium themes 2023,latest premium templates 2023,cymol themes,themetechmount,multi-theme,website theme and template, woocommerce, bootstrap template,web templates, responsive theme,services,web design and development, business, company,Electric Vehicles, Charging Station, car evacuation,charging points, electric bike, electric car, electric mobility, ev battery, gas station, Superchargers">
 <meta name="description" content="Elexio-Electric Vehicle &#8211;And Charging Station HTML Template">
 <meta name="keywords" content="Elexio &#8211; Electric Vehicle And Charging Station HTML Template">
-<meta name="author" content="https://www.preyantechnosys.com/">
+<!-- <meta name="author" content="https://www.preyantechnosys.com/"> -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Elexio &#8211; Electric Vehicle And Charging Station HTML Template</title>
+<title>Manoeco &#8211; Innovation</title>
 
 <link rel="shortcut icon" href="images/favicon.png">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -46,7 +45,7 @@
                                 <div class="col-lg-6">
                                     <div class="top_bar_contact_item">
                                         <div class="top_bar_icon"><i class="fa fa-map-marker"></i></div>
-                                        <div class="top_bar_content">24 Tech Roqad st Ny 10023</div>
+                                        <div class="top_bar_content">IC JBIET Moinabad 501504</div>
                                     </div>
                                     <div class="top_bar_contact_item">
                                         <div class="top_bar_icon"><i class="flaticon-clock-1"></i></div>
@@ -57,7 +56,7 @@
                                     <div class="contact-info">
                                         <div class="top_bar_contact_item prt-highlight-right">
                                             <div class="top_bar_icon"><i class="fa fa-envelope-o"></i></div>
-                                            <div class="top_bar_content"><a href="mailto:info@gmail.com">support@themetechmount.com</a></div>
+                                            <div class="top_bar_content"><a href="mailto:info@gmail.com">support@manoeco.in</a></div>
                                         </div>
                                         <div class="top_bar_content-main">Follow On :</div>
                                         <div class="top_bar_contact_item top_bar_social ml-auto p-0">
@@ -67,7 +66,7 @@
                                                 <li>
                                                     <a class="prt-social-twitter" href="https://twitter.com/themetechmount" rel="noopener" aria-label="twitter"><i class="fa fa-twitter"></i></a></li>
                                                 <li>
-                                                    <a class="prt-social-linkedin" href="https://www.linkedin.com/company/themetech-mount/" rel="noopener" aria-label="google"><i class="fa fa-linkedin"></i></a>
+                                                    <a class="prt-social-linkedin" href="https://www.linkedin.com/company/manoecoinnovations/" rel="noopener" aria-label="google"><i class="fa fa-linkedin"></i></a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -179,7 +178,7 @@
                                             <div class="widget_icon text-base-skin"><i class="flaticon-phone-call"></i></div>
                                             <div class="widget_content">
                                                 <p class="widget_desc">Call Us</p>
-                                                <h3 class="widget_title"><a href="tel:1234567890">+800 456 78 901</a></h3>
+                                                <h3 class="widget_title"><a href="tel:1234567890">+91 7993960091</a></h3>
                                             </div>
                                         </div>
                                     </div>
